--- a/src/components/TodoList/TodoItem/TodoItem.module.css
+++ b/src/components/TodoList/TodoItem/TodoItem.module.css
@@ -9,6 +9,16 @@
   border: 1px solid var(--gray-400, #333);
   background: var(--gray-500, #262626);
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06);
+
+  color: var(--gray-100, #f2f2f2);
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 19.6px */
+  margin: 0;
+  word-break: break-word;
+  text-align: start;
 }
 
 label {
@@ -37,24 +47,12 @@ label {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M8.98007 16.4262C13.0726 16.4262 16.3903 13.1085 16.3903 9.01593C16.3903 4.92336 13.0726 1.60568 8.98007 1.60568C4.8875 1.60568 1.56982 4.92336 1.56982 9.01593C1.56982 13.1085 4.8875 16.4262 8.98007 16.4262Z' fill='%235E60CE'/%3E%3Cpath d='M8.96428 1.85957C10.3765 1.85957 11.7571 2.27835 12.9313 3.06296C14.1056 3.84757 15.0208 4.96276 15.5612 6.26752C16.1017 7.57227 16.2431 9.00799 15.9676 10.3931C15.6921 11.7782 15.012 13.0505 14.0134 14.0492C13.0148 15.0478 11.7424 15.7278 10.3573 16.0034C8.9722 16.2789 7.53648 16.1375 6.23173 15.597C4.92697 15.0566 3.81178 14.1414 3.02717 12.9671C2.24257 11.7929 1.82378 10.4123 1.82378 9.00006C1.8311 7.10854 2.58574 5.29657 3.92326 3.95905C5.26079 2.62153 7.07275 1.86688 8.96428 1.85957ZM8.96428 0.272793C7.23972 0.279848 5.55592 0.797684 4.12543 1.76093C2.69494 2.72417 1.58191 4.08964 0.926831 5.68495C0.271755 7.28026 0.104012 9.03389 0.444777 10.7245C0.785541 12.415 1.61954 13.9667 2.84148 15.1837C4.06342 16.4006 5.61852 17.2283 7.31046 17.5622C9.00241 17.896 10.7553 17.7211 12.348 17.0595C13.9406 16.398 15.3015 15.2794 16.2589 13.8449C17.2163 12.4105 17.7272 10.7246 17.7273 9.00006C17.7273 7.85097 17.5003 6.71319 17.0595 5.65202C16.6187 4.59084 15.9727 3.62716 15.1585 2.81629C14.3443 2.00542 13.378 1.36332 12.315 0.926842C11.2521 0.490361 10.1134 0.268093 8.96428 0.272793Z' fill='%235E60CE'/%3E%3Cpath d='M12.4306 6.34212L8.09865 10.6741L5.61618 8.19159L4.78027 9.0275L8.09865 12.3459L13.2665 7.17803L12.4306 6.34212Z' fill='%23F2F2F2'/%3E%3C/svg%3E");
 }
 
-.todoName {
-  color: var(--gray-100, #f2f2f2);
-  font-family: Inter;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%; /* 19.6px */
-  margin: 0;
-  word-break: break-word;
-  text-align: start;
-}
-
 .itemButtons {
   display: flex;
   margin-left: auto;
 }
 
-.pencilIcon {
+.lopataIcon {
   width: 24px;
   height: 24px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 14 14' fill='none'%3E%3Cg clip-path='url(%23clip0_1552_22185)'%3E%3Cpath d='M4.85081 7.03755L6.97213 9.15887C7.06403 9.25076 7.11565 9.3754 7.11565 9.50535C7.11565 9.63531 7.06403 9.75994 6.97213 9.85183L3.84672 12.9772C3.47165 13.3523 2.96294 13.563 2.43251 13.563C1.90208 13.563 1.39337 13.3523 1.0183 12.9772V12.9772C0.643223 12.6022 0.43251 12.0935 0.43251 11.563C0.43251 11.0326 0.643223 10.5239 1.0183 10.1488L4.14371 7.02341C4.19038 6.97665 4.24603 6.93982 4.30731 6.91512C4.36859 6.89043 4.43422 6.87838 4.50028 6.8797C4.56633 6.88102 4.63143 6.89568 4.69167 6.92281C4.75191 6.94994 4.80604 6.98897 4.85081 7.03755Z' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M5.90997 8.08999L10.39 3.60999' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10.74 3.95L10.05 3.26V1.88L12.12 0.5L13.5 1.88L12.12 3.95H10.74Z' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1552_22185'%3E%3Crect width='14' height='14' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
@@ -64,4 +62,48 @@ label {
   width: 24px;
   height: 24px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 14 14' fill='none'%3E%3Cg clip-path='url(%23clip0_1552_23480)'%3E%3Cpath d='M7 5.5C10.3137 5.5 13 4.38071 13 3C13 1.61929 10.3137 0.5 7 0.5C3.68629 0.5 1 1.61929 1 3C1 4.38071 3.68629 5.5 7 5.5Z' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M11.87 6.73001C11 7.52001 9.14 8.07001 6.93 8.07001C5.58662 8.09859 4.25089 7.86067 3 7.37001' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10.86 9.84C9.82043 10.3655 8.66389 10.6167 7.5 10.57C6.65386 10.5789 5.81117 10.4609 5 10.22' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10.37 13.44C9.42 13.65 8.54 13.28 8.37 12.61' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1552_23480'%3E%3Crect width='14' height='14' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+
+.checked {
+  color: var(--gray-300, #808080);
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 19.6px */
+  text-decoration: line-through;
+}
+
+.inputValue {
+  display: flex;
+
+  align-items: center;
+  gap: 8px;
+  width: 638px;
+  height: 20px;
+  border-radius: 8px;
+  border: 1px solid var(--gray-700, #0d0d0d);
+  background: var(--gray-500, #262626);
+  color: var(--gray-100, #f2f2f2);
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 19.6px */
+}
+
+.saveIcon {
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 14 14' fill='none'%3E%3Cg clip-path='url(%23clip0_1552_22473)'%3E%3Cpath d='M3.37 5.85001L5.91 1.79001C6.00843 1.62954 6.14675 1.4973 6.31149 1.40617C6.47622 1.31504 6.66175 1.26813 6.85 1.27001V1.27001C6.99826 1.26466 7.14608 1.28908 7.28474 1.34184C7.4234 1.39459 7.55008 1.47461 7.65729 1.57715C7.7645 1.6797 7.85006 1.8027 7.90893 1.93888C7.96779 2.07506 7.99876 2.22166 8 2.37001V5.28001H12.39C12.5522 5.28527 12.7115 5.32481 12.8573 5.39602C13.0032 5.46723 13.1323 5.56851 13.2362 5.69319C13.3401 5.81788 13.4164 5.96314 13.4602 6.11943C13.5039 6.27572 13.5141 6.43951 13.49 6.60001L12.69 11.76C12.6559 12.0358 12.5222 12.2896 12.3141 12.4737C12.106 12.6579 11.8379 12.7597 11.56 12.76H5C4.68771 12.7612 4.37949 12.6893 4.1 12.55L3.38 12.19' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M3.37 5.85004V12.16' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M1 5.85004H3.37V12.16H1C0.867392 12.16 0.740215 12.1074 0.646447 12.0136C0.552678 11.9198 0.5 11.7926 0.5 11.66V6.35004C0.5 6.21743 0.552678 6.09025 0.646447 5.99648C0.740215 5.90272 0.867392 5.85004 1 5.85004V5.85004Z' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1552_22473'%3E%3Crect width='14' height='14' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+
+.cancelIcon {
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 14 14' fill='none'%3E%3Cg clip-path='url(%23clip0_1552_22478)'%3E%3Cpath d='M3.37 8.15001L5.91 12.21C6.00843 12.3705 6.14675 12.5027 6.31149 12.5938C6.47622 12.685 6.66175 12.7319 6.85 12.73C6.99826 12.7354 7.14608 12.7109 7.28474 12.6582C7.4234 12.6054 7.55008 12.5254 7.65729 12.4229C7.7645 12.3203 7.85006 12.1973 7.90893 12.0611C7.96779 11.925 7.99876 11.7784 8 11.63V8.72001H12.39C12.5522 8.71475 12.7115 8.67521 12.8573 8.60399C13.0032 8.53278 13.1323 8.4315 13.2362 8.30682C13.3401 8.18214 13.4164 8.03688 13.4602 7.88058C13.5039 7.72429 13.5141 7.56051 13.49 7.40001L12.69 2.24001C12.6559 1.96424 12.5222 1.71044 12.3141 1.52629C12.106 1.34215 11.8379 1.24034 11.56 1.24001H5C4.68771 1.23878 4.37949 1.3107 4.1 1.45001L3.38 1.81001' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M3.37 8.15003V1.84003' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M1 1.84003H3.37V8.15003H1C0.867392 8.15003 0.740215 8.09735 0.646447 8.00358C0.552678 7.90981 0.5 7.78264 0.5 7.65003V2.34003C0.5 2.20742 0.552678 2.08024 0.646447 1.98647C0.740215 1.89271 0.867392 1.84003 1 1.84003V1.84003Z' stroke='%23000001' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1552_22478'%3E%3Crect width='14' height='14' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+
+.editBtn {
+  display: flex;
 }
